# automation-advisor-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: graph.py  state.py
tests/: test_graph_smoke.py
