[project]
name = "automation-advisor-agent"
version = "0.1.0"
description = "A LangGraph multi-agent advisor that turns business process descriptions into automation proposals"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
